--- a/StyleTransfer.ipynb
+++ b/StyleTransfer.ipynb
@@ -48,7 +48,7 @@
         "  \n",
         "  img = kp_image.img_to_array(img)\n",
         "  \n",
-        "  # We need to broadcast the image array such that it has a batch dimension \n",
+        "  # Add one dimension for batches\n",
         "  img = np.expand_dims(img, axis=0)\n",
         "  return img\n",
         "\n",
@@ -194,7 +194,7 @@
         "\tloss_weights = (style_weight, content_weight)\n",
         "\tbest_loss, best_img = float('inf'), None\n",
         "\n",
-        "\t# For displaying\n",
+        "\t# For displaying grid\n",
         "\tnum_rows = 2\n",
         "\tnum_cols = 5\n",
         "\tdisplay_interval = num_iterations/(num_rows * num_cols)\n",
@@ -222,14 +222,13 @@
         "\t\tend_time = time.time() \n",
         "\n",
         "\t\tif loss < best_loss:\n",
-        "\t\t\t# Update best loss and best image from total loss. \n",
+        "\t\t\t# Save the image with the best score(smallest total loss) \n",
         "\t\t\tbest_loss = loss\n",
         "\t\t\tbest_img = prepare_image_visualization(generated_image.numpy())\n",
         "\n",
         "\t\tif i % display_interval== 0:\n",
         "\t\t\tstart_time = time.time()\n",
         "\n",
-        "\t    \t# Use the .numpy() method to get the concrete numpy array\n",
         "\t\t\tplot_img = generated_image.numpy()\n",
         "\t\t\tplot_img = prepare_image_visualization(plot_img)\n",
         "\t\t\timgs.append(plot_img)\n",
@@ -256,10 +255,6 @@
         "\timg_dir = '/tmp/nst'\n",
         "\tif not os.path.exists(img_dir):\n",
         "\t\tos.makedirs(img_dir)\n",
-        "# \t!wget --quiet -P /tmp/nst/ https://upload.wikimedia.org/wikipedia/commons/d/d7/Green_Sea_Turtle_grazing_seagrass.jpg\n",
-        "# \t!wget --quiet -P /tmp/nst/ https://upload.wikimedia.org/wikipedia/commons/0/0a/The_Great_Wave_off_Kanagawa.jpg      \n",
-        "# \tcontent_path = '/tmp/nst/Green_Sea_Turtle_grazing_seagrass.jpg'\n",
-        "# \tstyle_path = '/tmp/nst/The_Great_Wave_off_Kanagawa.jpg'\n",
         "    \n",
         "\tuploaded = files.upload()\n",
         "\tcontent_path = f'/content/{list(uploaded.keys())[0]}'\n",
@@ -285,7 +280,7 @@
         "args = {\"learning_rate\":5, \"iterations\": 1000}\n",
         "main(args)"
       ],
-      "execution_count": 30,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
